--- a/WebApp/Views/SinhVien/Index.cshtml
+++ b/WebApp/Views/SinhVien/Index.cshtml
@@ -9,6 +9,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+<div>Danh sách sinh viên</div>
 <table class="table">
     <tr>
         <th>
