đẩy lên delevoper

--- a/WebApp/Views/SinhVien/Index.cshtml
+++ b/WebApp/Views/SinhVien/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<div>Danh sách sinh viên: Cập nhật lần 1</div>
+<div>Danh sách sinh viên: Cập nhật lần 1, viết code tiếp, đẩy lên developerr</div>
 <table class="table">
     <tr>
         <th>
